// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CtaBanner/> should match snapshot 1`] = `
<Section
  className="theme--alpha cta-banner"
  contrast={false}
  data-test="component-cta-banner"
  theme={null}
  type="section"
>
  <Container
    className="container-fluid"
    fluid={false}
  >
    <Row
      className="row"
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <Heading
          innerHTML={true}
          priority="2"
        >
          CTA Banner
        </Heading>
      </Flex>
    </Row>
  </Container>
</Section>
`;

exports[`<CtaBanner/> should render with pageTheme instead of module theme 1`] = `
<Section
  className="theme--brand cta-banner"
  contrast={false}
  data-test="component-cta-banner"
  theme={null}
  type="section"
>
  <Container
    className="container-fluid"
    fluid={false}
  >
    <Row
      className="row"
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <Heading
          innerHTML={true}
          priority="2"
        >
          CTA Banner
        </Heading>
      </Flex>
    </Row>
  </Container>
</Section>
`;
